argocd/argo-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cd.rahmed.work`)
      priority: 10
      services:
        - name: argo-argocd-server
          port: 80
    - kind: Rule
      match: Host(`cd.rahmed.work`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argo-argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-server-tls
    domains:
    - main: cd.rahmed.work
